25 Jan 2004 mipsator
 * added support for --atleast-pkgconfig-version in pmkpc.
 * added man page for pmkpc.
 * added missing checks for hash_update* almost everywhere.

25 Jan 2004 sourceforge
 * repaired developer cvs server

22 Jan 2004 sourceforge
 * broken developer cvs server

21 Jan 2004 xsa
 * added the --usage option in pmkpc.
 * added the --help option in pmkpc.

21 Jan 2004 mipsator
 * use str_to_ulong() in functool and pmkinstall.
 * added compare_version() in pkgconfig for version string comparison.
 * updated func to use compare_version() instead of check_version().
 * removed check_version() from functool.
 * added support for option argument in pmkpc.
 * added support for --atleast-version, --exact-version and
	--max-version in pmkpc.

20 Jan 2004 mipsator
 * moved size type from int to size_t for most functions in common.
 * added str_to_ulong() in common for string to unsigned long conversions.

19 Jan 2004 xsa
 * imported sample test for C binary.

17 Jan 2004 mipsator
 * fixed specific deinstall stuff in Makefile.
 * fixed setting of shared lib cflags.
 * fixed init of ac_file and lang in global data.
 * added support for shared libs linking flags.
 * imported sample test for C shared library.

# snapshot 0.7.11

16 Jan 2004 mipsator
 * fixed parse_pc_file() to use pkgcell_init().
 * improved init of pmk's global data.
 * fixed some files to use our compatibility wrappers.

14 Jan 2004 mipsator
 * imported cfgtool.c and cfgtool.h to store config tool related code.
 * updated func.c to use cfgtool new functions.
 * moved config tool stuff from pkgconfig to cfgtool.
 * moved pmkcmd an pmkcmdopt typedefs to common.
 * improved pmkpc to fall back on config tool if module is not found.
 * added missing pkg-config options to pmkpc as 'not implemented' yet.

13 Jan 2004 mipsator
 * improved pmkpc to not care about argument order (like pkg-config).
 * added support for multiple module.
 * moved get_file_path() from functool to common.